fix share collapse

--- a/_src/assets/scss/home.scss
+++ b/_src/assets/scss/home.scss
@@ -16,7 +16,7 @@
   padding-bottom: 30px;
   @media all and (min-width: $mediaTablet) {
     display: grid;
-    grid-template-row: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 400px 1fr;
   }
 }
