--- a/_src/assets/scss/layouts/_data.scss
+++ b/_src/assets/scss/layouts/_data.scss
@@ -13,9 +13,10 @@
     flex-direction: row nowrap;
     justify-content: space-between;
 
-    .icon {
+    &__text__icon {
       color: $colorButton;
       font-size: 18px;
+      margin-right: 10px;
     }
     &__btn {
       font-size: 18px;
@@ -26,16 +27,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    &-before {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 30px;
-      width: 19px;
-      font-weight: bold;
-      transform: translate(0px, 37px);
-      background-color: rgba(63, 191, 127, 0.5);
-    }
     &__image {
       display: flex;
       flex-direction: row;
@@ -75,13 +66,11 @@
       margin-top: 7px;
       margin-bottom: 20px;
       border: 1px $colorPBlueTertiary solid;
-      padding: 10px;
-      padding-inline-start: 22px;
-      background-color: transparent;
       &::placeholder {
         font-family: $font-familyText;
         color: #c5c5c5;
         font-size: 14px;
+        padding-inline-start: 10px;
       }
     }
   }
